// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`parser Deep virtual elements 1`] = `
Document {
  "children": [
    VirtualElement {
      "binding": Binding {
        "name": Scope {
          "range": Range {
            "end": Position {
              "column": 11,
              "line": 0,
              "offset": 11,
            },
            "start": Position {
              "column": 8,
              "line": 0,
              "offset": 8,
            },
          },
          "text": "foo",
        },
        "param": Scope {
          "range": Range {
            "end": Position {
              "column": 16,
              "line": 0,
              "offset": 16,
            },
            "start": Position {
              "column": 13,
              "line": 0,
              "offset": 13,
            },
          },
          "text": "foo",
        },
        "parent": [Circular],
        "range": Range {
          "end": Position {
            "column": 20,
            "line": 0,
            "offset": 20,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
      "children": [
        VirtualElement {
          "binding": Binding {
            "name": Scope {
              "range": Range {
                "end": Position {
                  "column": 31,
                  "line": 0,
                  "offset": 31,
                },
                "start": Position {
                  "column": 28,
                  "line": 0,
                  "offset": 28,
                },
              },
              "text": "bar",
            },
            "param": Scope {
              "range": Range {
                "end": Position {
                  "column": 36,
                  "line": 0,
                  "offset": 36,
                },
                "start": Position {
                  "column": 33,
                  "line": 0,
                  "offset": 33,
                },
              },
              "text": "bar",
            },
            "parent": [Circular],
            "range": Range {
              "end": Position {
                "column": 40,
                "line": 0,
                "offset": 40,
              },
              "start": Position {
                "column": 20,
                "line": 0,
                "offset": 20,
              },
            },
          },
          "children": [],
          "end": Comment {
            "content": " /ko ",
            "range": Range {
              "end": Position {
                "column": 52,
                "line": 0,
                "offset": 52,
              },
              "start": Position {
                "column": 40,
                "line": 0,
                "offset": 40,
              },
            },
          },
          "hidden": false,
          "range": Range {
            "end": Position {
              "column": 52,
              "line": 0,
              "offset": 52,
            },
            "start": Position {
              "column": 20,
              "line": 0,
              "offset": 20,
            },
          },
          "start": Comment {
            "content": " ko bar: bar ",
            "range": Range {
              "end": Position {
                "column": 40,
                "line": 0,
                "offset": 40,
              },
              "start": Position {
                "column": 20,
                "line": 0,
                "offset": 20,
              },
            },
          },
        },
      ],
      "end": Comment {
        "content": " /ko ",
        "range": Range {
          "end": Position {
            "column": 64,
            "line": 0,
            "offset": 64,
          },
          "start": Position {
            "column": 52,
            "line": 0,
            "offset": 52,
          },
        },
      },
      "hidden": false,
      "range": Range {
        "end": Position {
          "column": 64,
          "line": 0,
          "offset": 64,
        },
        "start": Position {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "start": Comment {
        "content": " ko foo: foo ",
        "range": Range {
          "end": Position {
            "column": 20,
            "line": 0,
            "offset": 20,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
    },
  ],
  "range": Range {
    "end": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
    "start": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
  },
}
`;

exports[`parser Hidden virtual element 1`] = `
Document {
  "children": [
    VirtualElement {
      "binding": Binding {
        "name": Scope {
          "range": Range {
            "end": Position {
              "column": 12,
              "line": 0,
              "offset": 12,
            },
            "start": Position {
              "column": 9,
              "line": 0,
              "offset": 9,
            },
          },
          "text": "foo",
        },
        "param": Scope {
          "range": Range {
            "end": Position {
              "column": 17,
              "line": 0,
              "offset": 17,
            },
            "start": Position {
              "column": 14,
              "line": 0,
              "offset": 14,
            },
          },
          "text": "foo",
        },
        "parent": [Circular],
        "range": Range {
          "end": Position {
            "column": 21,
            "line": 0,
            "offset": 21,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
      "children": [],
      "end": Comment {
        "content": " /ko ",
        "range": Range {
          "end": Position {
            "column": 33,
            "line": 0,
            "offset": 33,
          },
          "start": Position {
            "column": 21,
            "line": 0,
            "offset": 21,
          },
        },
      },
      "hidden": true,
      "range": Range {
        "end": Position {
          "column": 33,
          "line": 0,
          "offset": 33,
        },
        "start": Position {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "start": Comment {
        "content": " #ko foo: foo ",
        "range": Range {
          "end": Position {
            "column": 21,
            "line": 0,
            "offset": 21,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
    },
  ],
  "range": Range {
    "end": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
    "start": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
  },
}
`;

exports[`parser Element bindings 1`] = `
Document {
  "children": [
    Element {
      "attributes": [
        Attribute {
          "name": Scope {
            "range": Range {
              "end": Position {
                "column": 14,
                "line": 0,
                "offset": 14,
              },
              "start": Position {
                "column": 5,
                "line": 0,
                "offset": 5,
              },
            },
            "text": "data-bind",
          },
          "namespace": undefined,
          "prefix": undefined,
          "quote": "'",
          "range": Range {
            "end": Position {
              "column": 23,
              "line": 0,
              "offset": 23,
            },
            "start": Position {
              "column": 5,
              "line": 0,
              "offset": 5,
            },
          },
          "value": Scope {
            "range": Range {
              "end": Position {
                "column": 23,
                "line": 0,
                "offset": 23,
              },
              "start": Position {
                "column": 16,
                "line": 0,
                "offset": 16,
              },
            },
            "text": "0: bar",
          },
        },
      ],
      "bindings": [
        Binding {
          "name": Scope {
            "range": Range {
              "end": Position {
                "column": 17,
                "line": 0,
                "offset": 17,
              },
              "start": Position {
                "column": 16,
                "line": 0,
                "offset": 16,
              },
            },
            "text": "0",
          },
          "param": Scope {
            "range": Range {
              "end": Position {
                "column": 22,
                "line": 0,
                "offset": 22,
              },
              "start": Position {
                "column": 19,
                "line": 0,
                "offset": 19,
              },
            },
            "text": "bar",
          },
          "parent": Attribute {
            "name": Scope {
              "range": Range {
                "end": Position {
                  "column": 14,
                  "line": 0,
                  "offset": 14,
                },
                "start": Position {
                  "column": 5,
                  "line": 0,
                  "offset": 5,
                },
              },
              "text": "data-bind",
            },
            "namespace": undefined,
            "prefix": undefined,
            "quote": "'",
            "range": Range {
              "end": Position {
                "column": 23,
                "line": 0,
                "offset": 23,
              },
              "start": Position {
                "column": 5,
                "line": 0,
                "offset": 5,
              },
            },
            "value": Scope {
              "range": Range {
                "end": Position {
                  "column": 23,
                  "line": 0,
                  "offset": 23,
                },
                "start": Position {
                  "column": 16,
                  "line": 0,
                  "offset": 16,
                },
              },
              "text": "0: bar",
            },
          },
          "range": Range {
            "end": Position {
              "column": 22,
              "line": 0,
              "offset": 22,
            },
            "start": Position {
              "column": 16,
              "line": 0,
              "offset": 16,
            },
          },
        },
      ],
      "children": [],
      "range": Range {
        "end": Position {
          "column": 30,
          "line": 0,
          "offset": 30,
        },
        "start": Position {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "tagName": "div",
    },
  ],
  "range": Range {
    "end": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
    "start": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
  },
}
`;
